feat: 팀관리 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -112,6 +112,9 @@
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리</li>
                 </a>
+                <a href="{% url 'HR:team' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">팀관리</li>
+                </a>
               </ul>
             </div>
           </div>
