fix: SalaryList get 접근권한 설정 부분 삭제, 직원등록, 수정 시 팀관리 항목 저장 안되던 부분 수정
SalaryList get 접근권한 안돼있길래 저번에 추가했는데 추가하면 안되는 거였음, 원복시킴
팀관리 input으로 되어있던 부분 select로 바꾸고 값 제대로 받게 수정

--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -251,8 +251,12 @@
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">소속팀</label>
-                        <input autocomplete="off" name="team" type="text"
-                            class="popupArticleinput PopupDataInputTeam length100">
+                        <select name="team" type="text" class="popupArticleinput PopupDataInputTeam length100">
+                            <option></option>
+                            {% for team in team_list %}
+                            <option value="{{team.id}}">{{team.name}}</option>
+                            {% endfor %}
+                        </select>
                     </div>
                 </div>
                 <div class="popupArticleBox">
@@ -508,8 +512,12 @@
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">소속팀</label>
-                        <input autocomplete="off" id="team" name="team" type="text"
-                            class="popupArticleinput hrTeam length100">
+                        <select id="team" name="team" type="text" class="popupArticleinput hrTeam length100">
+                            <option></option>
+                            {% for team in team_list %}
+                            <option value="{{team.id}}">{{team.name}}</option>
+                            {% endfor %}
+                        </select>
                     </div>
                 </div>
                 <div class="popupArticleBox">
