--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1083,6 +1083,10 @@ html::-webkit-scrollbar-track {
   cursor: pointer;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .backgroundBlue {
   background-color: #0069D9;
 }
