--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1091,6 +1091,10 @@ html::-webkit-scrollbar-track {
   background-color: #0069D9;
 }
 
+.backgroundGray {
+  background-color: #CDCDCE;
+}
+
 
 .loadingBg{
   position: absolute;
