feat: nav menu에 출/퇴근 배차표 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,6 +93,9 @@
                 <a href="{% url 'dispatch:driving' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">운행일보</li>
                 </a>
+                <a href="{% url 'dispatch:regularly_connect' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">출/퇴근 배차표</li>
+                </a>
               </ul>
             </div>
           </div>
