feat: 직원관리 직원수정, 등록 팝업 통합, 수당기준 추가
수당기준 항목 추가, 담당업무가 운전원일 때만 수당기준 입력칸 보이게 함
직원관리 직원수정, 직원등록 따로 있던 팝업을 직원수정 하나로 합침

--- a/static/css/humanresource/member.css
+++ b/static/css/humanresource/member.css
@@ -265,7 +265,7 @@ td:nth-child(13) {
     height: 100%;
 }
 
-.hrPW {
+.hrEditPW {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -280,7 +280,7 @@ td:nth-child(13) {
     cursor: pointer;
 }
 
-.hrPW svg {
+.hrEditPW svg {
     margin-right: 1rem;
 }
 
@@ -314,6 +314,9 @@ td:nth-child(13) {
     width: 100%;
 }
 
+.popupArticleBoxAllowanceType {
+    display: none;
+}
 
 @media all and (min-width:1600px) and (max-width: 1780px) {
     .tableHead tr {
