--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -168,7 +168,7 @@
 
 
 {% block popup %}
-
+<!--
 <div class="popupAreaModules">
     <div class="popupBgModules"></div>
     <form method="post" action="{% url 'HR:member_create' %}"
@@ -207,7 +207,7 @@
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">직급</label>
-                        <select name="position" class="popupArticleinput PopupDataInputWork">
+                        <select name="position" class="popupArticleinput">
                             <option value="">직급 선택</option>
                             <option value="인턴">인턴</option>
                             <option value="사원">사원</option>
@@ -393,7 +393,7 @@
             </div>
         </div>
     </form>
-</div>
+</div>-->
 
 
 
@@ -402,10 +402,10 @@
 <div class="popupAreaModules">
     <div class="popupBgModules"></div>
     <form method="post" action="{% url 'HR:member_edit' %}"
-        class="popupContainer popupContainerDouble memberEditForm" enctype="multipart/form-data">
+        class="popupContainer popupContainerDouble memberForm" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="popupHeader">
-            <div class="popupTitle">직원수정</div>
+            <div class="popupTitle popupHR"></div>
         </div>
         <div class="popupBody popupBodyMember">
             <div class="popupSection">
@@ -414,11 +414,11 @@
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel"><span class="importantStar">*</span>이름</label>
                         <input autocomplete="off" name="name" type="text"
-                            class="popupArticleinput hrName length100 editEssential">
+                            class="popupArticleinput hrName createName length100 essential">
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel"><span class="importantStar">*</span>담당업무</label>
-                        <select name="role" id="editRole" class="popupArticleinput hrRole">
+                        <select name="role" id="editRole" class="popupArticleinput hrRole essential PopupDataInputWork">
                             <option value="">담당업무 선택</option>
                             <option value="임시">임시</option>
                             <option value="용역">용역</option>
@@ -429,15 +429,29 @@
                         </select>
                     </div>
                 </div>
+                <div class="popupArticleBox popupArticleBoxAllowanceType">
+                    <div class="popupArticleDouble">
+                        <label for="" class="popupArticleLabel"></label>
+                        <div class="popupIdBox">
+                        </div>
+                    </div>
+                    <div class="popupArticleDouble">
+                        <label for="" class="popupArticleLabel">수당기준</label>
+                        <select id="allowanceType" class="popupArticleinput hrAllowanceType PopupDataInputWork">
+                            <option value="기사수당(현재)">기사수당(현재)</option>
+                            <option value="기사수당(변경)">기사수당(변경)</option>
+                        </select>
+                    </div>
+                </div>
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel"><span class="importantStar">*</span>입사일</label>
                         <input autocomplete="off" name="entering_date" type="date" max="9999-12-31"
-                            class="popupArticleinput hrEntering length100 editEssential">
+                            class="popupArticleinput hrEntering length100 essential">
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">직급</label>
-                        <select name="position" id="position" class="popupArticleinput PopupDataInputWork">
+                        <select name="position" id="position" class="popupArticleinput">
                             <option value="">직급 선택</option>
                             <option value="인턴">인턴</option>
                             <option value="사원">사원</option>
@@ -467,7 +481,7 @@
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel"><span class="importantStar">*</span>휴대폰번호</label>
                         <input autocomplete="off" name="phone_num" type="text"
-                            class="popupArticleinput hrPhone length100 editEssential makeHyphen"
+                            class="popupArticleinput hrPhone length100 essential makeHyphen"
                             placeholder="'-'을 생략하고 입력해 주세요.">
                     </div>
                 </div>
@@ -503,7 +517,7 @@
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel"><span class="importantStar">*</span>주소</label>
                         <input autocomplete="off" name="address" type="text"
-                            class="popupArticleinput hrAddress length100 editEssential">
+                            class="popupArticleinput hrAddress length100 essential">
                     </div>
                     <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">비고</label>
@@ -600,15 +614,24 @@
                 </div>
                 <div class="popupArticleCategori authorityDivision">계정정보</div>
                 <div class="popupArticleBox authorityDivision">
-                    <div class="popupArticleDouble">
+                    <div class="popupArticleDouble popupEditId">
                         <label for="" class="popupArticleLabel">아이디</label>
                         <div class="popupIdBox">
                             <input autocomplete="off" type="text" class="popupArticleinput hrID" readonly>
                         </div>
                     </div>
-                    <div class="popupArticleDouble">
+                    <!-- 등록 -->
+                    <div class="popupArticleDouble popupRegisterId">
+                        <label for="" class="popupArticleLabel">아이디</label>
+                        <div class="popupIdBox">
+                            <input autocomplete="off" name="user_id" type="text"
+                                class="popupArticleinput createID length100">
+                            <div class="idchecker" onClick="id_overlap_check_hr()">중복확인</div>
+                        </div>
+                    </div>
+                    <div class="popupArticleDouble popupEditPassword">
                         <label for="" class="popupArticleLabel">비밀번호</label>
-                        <div class="hrPW">
+                        <div class="hrEditPW">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18.012" height="18" viewBox="0 0 18.012 18">
                                 <path id="Icon_awesome-redo" data-name="Icon awesome-redo"
                                     d="M18.146,0H16.452a.429.429,0,0,0-.429.449L16.167,3.4a8.857,8.857,0,1,0-.812,12.313.429.429,0,0,0,.017-.622l-1.214-1.214a.429.429,0,0,0-.585-.02,6.286,6.286,0,1,1,1.065-8.225l-3.626-.174a.429.429,0,0,0-.449.429V7.584a.429.429,0,0,0,.429.429h7.155a.429.429,0,0,0,.429-.429V.429A.429.429,0,0,0,18.146,0Z"
@@ -616,12 +639,14 @@
                             </svg>
                             <span>비밀번호 초기화</span>
                         </div>
+                        <!--  -->
+                        <input autocomplete="off" name="pw" type="text" class="popupArticleinput hrRegisterPW" readonly value="0000">
                     </div>
                 </div>
                 <input name="id" type="hidden" class="sendToHidden">
             </div>
             <div class="popupFooter">
-                <div class="btnModules btnModulesCreate memberEditSaveBtn">저장</div>
+                <div class="btnModules btnModulesCreate">저장</div>
                 <div class="btnModules popupCloseBtn">닫기</div>
             </div>
         </div>
