feat: 출/퇴근배차 기사수당, 용역수당 추가, 거리km 항목 추가

--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -246,8 +246,12 @@
         </tr>
         <tr>
           <td class="tdTypeA">노선명</td>
-          <td colspan="3" class="tdTypeB">
+          <td class="tdTypeC">
             <input autocomplete="off" value="{{detail.route}}" name="" type="text" class="inputText">
+          </td>
+          <td class="tdTypeA">거리km</td>
+          <td class="tdTypeC">
+            <input autocomplete="off" value="{{detail.distance}}" type="text" class="inputText">
           </td>
           <td class="tdTypeA">운행요일</td>
           <td colspan="3" class="tdTypeB">
