--- a/document/templates/document/school_print.html
+++ b/document/templates/document/school_print.html
@@ -18,7 +18,7 @@
         <input autocomplete="off" type="text" value="학생현장교육차량">
         <input autocomplete="off" type="text" value="1학년 1반">
         <input autocomplete="off" type="text" value="학교명 : {{order.customer}}">
-        <input autocomplete="off" type="text">
+        <input autocomplete="off" type="text">5
     </div>
 </div>
 
