--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -431,16 +431,15 @@
                 </div>
                 <div class="popupArticleBox popupArticleBoxAllowanceType">
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel"></label>
-                        <div class="popupIdBox">
-                        </div>
-                    </div>
-                    <div class="popupArticleDouble">
                         <label for="" class="popupArticleLabel">수당기준</label>
                         <select id="allowanceType" class="popupArticleinput hrAllowanceType PopupDataInputWork">
                             <option value="기사수당(현재)">기사수당(현재)</option>
                             <option value="기사수당(변경)">기사수당(변경)</option>
                         </select>
+                    </div>
+                    <div class="popupArticleDouble hrAllowanceTypeMonthDiv">
+                        <label for="" class="popupArticleLabel">수당변경기준일</label>
+                        <input autocomplete="off" name="allowance_type_month" type="month" class="popupArticleinput hrAllowanceTypeMonth length100">
                     </div>
                 </div>
                 <div class="popupArticleBox">
