fix: 출/퇴근배차 거리 필수 입력으로 되어있던 부분 수정, css 수정

--- a/dispatch/templates/dispatch/regularly_route.html
+++ b/dispatch/templates/dispatch/regularly_route.html
@@ -227,7 +227,7 @@
                     <td class="tdTypeA">거리km</td>
                     <td class="tdTypeC">
                         <input autocomplete="off" value="{{detail.distance}}" name="distance" type="number"
-                            class="inputText essential length15" tabindex="2">
+                            class="inputText length15" tabindex="2">
                     </td>
                     <td class="tdTypeA">*운행요일</td>
                     <td colspan="3" class="tdTypeB">
