일일점검 주간점검 비품점검 프론트 완료

--- a/templates/base.html
+++ b/templates/base.html
@@ -160,6 +160,15 @@
                 <a href="{% url 'vehicle:refueling' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">주유관리</li>
                 </a>
+                <a href="{% url 'vehicle:dailychecklist' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">일일점검</li>
+                </a>
+                <a href="{% url 'vehicle:weeklychecklist' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">주간점검</li>
+                </a>
+                <a href="{% url 'vehicle:equipmentchecklist' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">비품점검</li>
+                </a>
               </ul>
             </div>
           </div>
